[Navigation] Changed Navigation, removed icon and moved navs to new placces

--- a/src/scss/templates/_navigation.scss
+++ b/src/scss/templates/_navigation.scss
@@ -1,12 +1,11 @@
 .sidenav-main-menu-toggler {
-  span {
+  rv-icon {
     @extend .rotate-animate;
-    @extend .rotate-0;
+    @extend .rotate-45;
   }
   &[aria-expanded='true'] {
-    // display: none !important;
-    span {
-      @extend .rotate-45;
+    rv-icon {
+      @extend .rotate-0;
     }
   }
 }
