--- a/src/ts/components/_components.scss
+++ b/src/ts/components/_components.scss
@@ -1,16 +1,25 @@
-@import './shopify-linklist/shopify-linklist.component';
+@import './bs4/bs4.components';
+// @import './component-skeleton/component-skeleton.component';
+@import './contact-form/contact-form.component';
 @import './cookie-banner/cookie-banner.component';
-@import './shopify-filter/shopify-filter.component';
+@import './debug-bar/debug-bar.component';
+@import './delete-data-form/delete-data-form.component';
+@import './fsbdr-mainbar/fsbdr-mainbar.component';
+@import './icon/icon.component';
+@import './instagram/instagram.component';
+@import './instagram-scrollbar/instagram-scrollbar.component';
+@import './newsletter/newsletter.component';
+@import './privacy-settings/privacy-settings.component';
+@import './revoke-form/revoke-form.component';
+@import './share/share.component';
+@import './shopify-addresses/shopify-addresses.component';
+// @import './shopify-article-item/shopify-article-item.component';
 @import './shopify-cart/shopify-cart.component';
 @import './shopify-cart-button/shopify-cart-button.component';
 @import './shopify-comments-form/shopify-comments-form.component';
+@import './shopify-filter/shopify-filter.component';
+@import './shopify-linklist/shopify-linklist.component';
 @import './shopify-login-form/shopify-login-form.component';
 @import './shopify-product/shopify-product.component';
 @import './shopify-product-item/shopify-product-item.component';
-@import './share/share.component';
-@import './icon/icon.component';
-@import './newsletter/newsletter.component';
-@import './instagram/instagram.component';
-@import './instagram-scrollbar/instagram-scrollbar.component';
 @import './switcher/switcher.component';
-@import './debug-bar/debug-bar.component';
