--- a/theme/sections/live-chat.liquid
+++ b/theme/sections/live-chat.liquid
@@ -24,7 +24,7 @@
       height: auto;
       display: block;
       position: fixed;
-      z-index: 99999;
+      z-index: 1020;
     }
     .live-chat-button img {
       max-width: 100%;
@@ -34,26 +34,26 @@
     .live-chat-button.bottom-right {
       top: unset;
       left: unset;
-      bottom: {{section.settings.spacing_bottom}}vh;
-      right: {{section.settings.spacing_right}}vw;
+      bottom: {{section.settings.spacing_bottom}}px;
+      right: {{section.settings.spacing_right}}px;
     }
     .live-chat-button.bottom-left {
       top: unset;
       right: unset;
-      bottom: {{section.settings.spacing_bottom}}vh;
-      left: {{section.settings.spacing_left}}vw;
+      bottom: {{section.settings.spacing_bottom}}px;
+      left: {{section.settings.spacing_left}}px;
     }
     .live-chat-button.top-right {
       bottom: unset;
       left: unset;
-      top: {{section.settings.spacing_top}}vh;
-      right: {{section.settings.spacing_right}}vw;
+      top: {{section.settings.spacing_top}}px;
+      right: {{section.settings.spacing_right}}px;
     }
     .live-chat-button.top-left {
       bottom: unset;
       right: unset;
-      top: {{section.settings.spacing_top}}vh;
-      left: {{section.settings.spacing_left}}vw;
+      top: {{section.settings.spacing_top}}px;
+      left: {{section.settings.spacing_left}}px;
     }
 
     {% comment %} sm 576px {% endcomment %}
@@ -61,32 +61,32 @@
       .live-chat-button.bottom-right-sm {
         top: unset;
         left: unset;
-        bottom: {{section.settings.spacing_bottom}}vh;
-        right: {{section.settings.spacing_right}}vw;
+        bottom: {{section.settings.spacing_bottom}}px;
+        right: {{section.settings.spacing_right}}px;
       }
     }
     @media (min-width: 576px) {
       .live-chat-button.bottom-left-sm {
         top: unset;
         right: unset;
-        bottom: {{section.settings.spacing_bottom}}vh;
-        left: {{section.settings.spacing_left}}vw;
+        bottom: {{section.settings.spacing_bottom}}px;
+        left: {{section.settings.spacing_left}}px;
       }
     }
     @media (min-width: 576px) {
       .live-chat-button.top-right-sm {
         bottom: unset;
         left: unset;
-        top: {{section.settings.spacing_top}}vh;
-        right: 3vw
+        top: {{section.settings.spacing_top}}px;
+        right: 3px
       };
     }
     @media (min-width: 576px) {
       .live-chat-button.top-left-sm {
         bottom: unset;
         right: unset;
-        top: {{section.settings.spacing_top}}vh;
-        left: {{section.settings.spacing_left}}vw;
+        top: {{section.settings.spacing_top}}px;
+        left: {{section.settings.spacing_left}}px;
       }
     }
 
@@ -95,32 +95,32 @@
       .live-chat-button.bottom-right-md {
         top: unset;
         left: unset;
-        bottom: {{section.settings.spacing_bottom}}vh;
-        right: {{section.settings.spacing_right}}vw;
+        bottom: {{section.settings.spacing_bottom}}px;
+        right: {{section.settings.spacing_right}}px;
       }
     }
     @media (min-width: 768px) {
       .live-chat-button.bottom-left-md {
         top: unset;
         right: unset;
-        bottom: {{section.settings.spacing_bottom}}vh;
-        left: {{section.settings.spacing_left}}vw;
+        bottom: {{section.settings.spacing_bottom}}px;
+        left: {{section.settings.spacing_left}}px;
       }
     }
     @media (min-width: 768px) {
       .live-chat-button.top-right-md {
         bottom: unset;
         left: unset;
-        top: {{section.settings.spacing_top}}vh;
-        right: {{section.settings.spacing_right}}vw;
+        top: {{section.settings.spacing_top}}px;
+        right: {{section.settings.spacing_right}}px;
       }
     }
     @media (min-width: 768px) {
       .live-chat-button.top-left-md {
         bottom: unset;
         right: unset;
-        top: {{section.settings.spacing_top}}vh;
-        left: {{section.settings.spacing_left}}vw;
+        top: {{section.settings.spacing_top}}px;
+        left: {{section.settings.spacing_left}}px;
       }
     }
 
@@ -130,32 +130,32 @@
       .live-chat-button.bottom-right-lg {
         top: unset;
         left: unset;
-        bottom: {{section.settings.spacing_bottom}}vh;
-        right: {{section.settings.spacing_right}}vw;
+        bottom: {{section.settings.spacing_bottom}}px;
+        right: {{section.settings.spacing_right}}px;
       }
     }
     @media (min-width: 992px) {
       .live-chat-button.bottom-left-lg {
         top: unset;
         right: unset;
-        bottom: {{section.settings.spacing_bottom}}vh;
-        left: {{section.settings.spacing_left}}vw;
+        bottom: {{section.settings.spacing_bottom}}px;
+        left: {{section.settings.spacing_left}}px;
       }
     }
     @media (min-width: 992px) {
       .live-chat-button.top-right-lg {
         bottom: unset;
         left: unset;
-        top: {{section.settings.spacing_top}}vh;
-        right: {{section.settings.spacing_right}}vw;
+        top: {{section.settings.spacing_top}}px;
+        right: {{section.settings.spacing_right}}px;
       }
     }
     @media (min-width: 992px) {
       .live-chat-button.top-left-lg {
         bottom: unset;
         right: unset;
-        top: {{section.settings.spacing_top}}vh;
-        left: {{section.settings.spacing_left}}vw;
+        top: {{section.settings.spacing_top}}px;
+        left: {{section.settings.spacing_left}}px;
       }
     }
 
@@ -164,32 +164,32 @@
       .live-chat-button.bottom-right-xl {
         top: unset;
         left: unset;
-        bottom: {{section.settings.spacing_bottom}}vh;
-        right: {{section.settings.spacing_right}}vw;
+        bottom: {{section.settings.spacing_bottom}}px;
+        right: {{section.settings.spacing_right}}px;
       }
     }
     @media (min-width: 992px) {
       .live-chat-button.bottom-left-xl {
         top: unset;
         right: unset;
-        bottom: {{section.settings.spacing_bottom}}vh;
-        left: {{section.settings.spacing_left}}vw;
+        bottom: {{section.settings.spacing_bottom}}px;
+        left: {{section.settings.spacing_left}}px;
       }
     }
     @media (min-width: 992px) {
       .live-chat-button.top-right-xl {
         bottom: unset;
         left: unset;
-        top: {{section.settings.spacing_top}}vh;
-        right: {{section.settings.spacing_right}}vw;
+        top: {{section.settings.spacing_top}}px;
+        right: {{section.settings.spacing_right}}px;
       }
     }
     @media (min-width: 992px) {
       .live-chat-button.top-left-xl {
         bottom: unset;
         right: unset;
-        top: {{section.settings.spacing_top}}vh;
-        left: {{section.settings.spacing_left}}vw;
+        top: {{section.settings.spacing_top}}px;
+        left: {{section.settings.spacing_left}}px;
       }
     }
   </style>
@@ -223,41 +223,41 @@
         "type":      "range",
         "id":        "spacing_top",
         "min":       0,
-        "max":        50,
-        "step":       1,
-        "unit":       "vh",
+        "max":        1000,
+        "step":       10,
+        "unit":       "px",
         "label":     "Spacing top",
-        "default":   3
+        "default":   40
       },
       {
         "type":      "range",
         "id":        "spacing_bottom",
         "min":       0,
-        "max":        50,
-        "step":       1,
-        "unit":       "vh",
+        "max":        1000,
+        "step":       10,
+        "unit":       "px",
         "label":     "Spacing bottom",
-        "default":   3
+        "default":   40
       },
       {
         "type":      "range",
         "id":        "spacing_left",
         "min":       0,
-        "max":        50,
-        "step":       1,
-        "unit":       "vw",
+        "max":        1000,
+        "step":       10,
+        "unit":       "px",
         "label":     "Spacing left",
-        "default":   3
+        "default":   40
       },
       {
         "type":      "range",
         "id":        "spacing_right",
         "min":       0,
-        "max":        50,
-        "step":       1,
-        "unit":       "vw",
+        "max":        1000,
+        "step":       10,
+        "unit":       "px",
         "label":     "Spacing right",
-        "default":   3
+        "default":   40
       },
       {
         "type":      "select",
