--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -174,6 +174,7 @@
   border: 1px solid $custom-control-indicator-checked-color;
 }
 
+.custom-control-label::before,
 .custom-control-input:checked ~ .custom-control-label::before {
   border: none;
 }
