[Bug] Fix live chat button position on IE

--- a/theme/sections/live-chat.liquid
+++ b/theme/sections/live-chat.liquid
@@ -32,26 +32,26 @@
 
     {% comment %} xs {% endcomment %}
     .live-chat-button.bottom-right {
-      top: unset;
-      left: unset;
+      top: auto;
+      left: auto;
       bottom: {{section.settings.spacing_bottom}}px;
       right: {{section.settings.spacing_right}}px;
     }
     .live-chat-button.bottom-left {
-      top: unset;
-      right: unset;
+      top: auto;
+      right: auto;
       bottom: {{section.settings.spacing_bottom}}px;
       left: {{section.settings.spacing_left}}px;
     }
     .live-chat-button.top-right {
-      bottom: unset;
-      left: unset;
+      bottom: auto;
+      left: auto;
       top: {{section.settings.spacing_top}}px;
       right: {{section.settings.spacing_right}}px;
     }
     .live-chat-button.top-left {
-      bottom: unset;
-      right: unset;
+      bottom: auto;
+      right: auto;
       top: {{section.settings.spacing_top}}px;
       left: {{section.settings.spacing_left}}px;
     }
@@ -59,32 +59,32 @@
     {% comment %} sm 576px {% endcomment %}
     @media (min-width: 576px) {
       .live-chat-button.bottom-right-sm {
-        top: unset;
-        left: unset;
+        top: auto;
+        left: auto;
         bottom: {{section.settings.spacing_bottom}}px;
         right: {{section.settings.spacing_right}}px;
       }
     }
     @media (min-width: 576px) {
       .live-chat-button.bottom-left-sm {
-        top: unset;
-        right: unset;
+        top: auto;
+        right: auto;
         bottom: {{section.settings.spacing_bottom}}px;
         left: {{section.settings.spacing_left}}px;
       }
     }
     @media (min-width: 576px) {
       .live-chat-button.top-right-sm {
-        bottom: unset;
-        left: unset;
+        bottom: auto;
+        left: auto;
         top: {{section.settings.spacing_top}}px;
         right: 3px
       };
     }
     @media (min-width: 576px) {
       .live-chat-button.top-left-sm {
-        bottom: unset;
-        right: unset;
+        bottom: auto;
+        right: auto;
         top: {{section.settings.spacing_top}}px;
         left: {{section.settings.spacing_left}}px;
       }
@@ -93,32 +93,32 @@
     {% comment %} md 768px {% endcomment %}
     @media (min-width: 768px) {
       .live-chat-button.bottom-right-md {
-        top: unset;
-        left: unset;
+        top: auto;
+        left: auto;
         bottom: {{section.settings.spacing_bottom}}px;
         right: {{section.settings.spacing_right}}px;
       }
     }
     @media (min-width: 768px) {
       .live-chat-button.bottom-left-md {
-        top: unset;
-        right: unset;
+        top: auto;
+        right: auto;
         bottom: {{section.settings.spacing_bottom}}px;
         left: {{section.settings.spacing_left}}px;
       }
     }
     @media (min-width: 768px) {
       .live-chat-button.top-right-md {
-        bottom: unset;
-        left: unset;
+        bottom: auto;
+        left: auto;
         top: {{section.settings.spacing_top}}px;
         right: {{section.settings.spacing_right}}px;
       }
     }
     @media (min-width: 768px) {
       .live-chat-button.top-left-md {
-        bottom: unset;
-        right: unset;
+        bottom: auto;
+        right: auto;
         top: {{section.settings.spacing_top}}px;
         left: {{section.settings.spacing_left}}px;
       }
@@ -128,32 +128,32 @@
     {% comment %} lg 992px {% endcomment %}
     @media (min-width: 992px) {
       .live-chat-button.bottom-right-lg {
-        top: unset;
-        left: unset;
+        top: auto;
+        left: auto;
         bottom: {{section.settings.spacing_bottom}}px;
         right: {{section.settings.spacing_right}}px;
       }
     }
     @media (min-width: 992px) {
       .live-chat-button.bottom-left-lg {
-        top: unset;
-        right: unset;
+        top: auto;
+        right: auto;
         bottom: {{section.settings.spacing_bottom}}px;
         left: {{section.settings.spacing_left}}px;
       }
     }
     @media (min-width: 992px) {
       .live-chat-button.top-right-lg {
-        bottom: unset;
-        left: unset;
+        bottom: auto;
+        left: auto;
         top: {{section.settings.spacing_top}}px;
         right: {{section.settings.spacing_right}}px;
       }
     }
     @media (min-width: 992px) {
       .live-chat-button.top-left-lg {
-        bottom: unset;
-        right: unset;
+        bottom: auto;
+        right: auto;
         top: {{section.settings.spacing_top}}px;
         left: {{section.settings.spacing_left}}px;
       }
@@ -162,32 +162,32 @@
     {% comment %} xl 1200px {% endcomment %}
     @media (min-width: 992px) {
       .live-chat-button.bottom-right-xl {
-        top: unset;
-        left: unset;
+        top: auto;
+        left: auto;
         bottom: {{section.settings.spacing_bottom}}px;
         right: {{section.settings.spacing_right}}px;
       }
     }
     @media (min-width: 992px) {
       .live-chat-button.bottom-left-xl {
-        top: unset;
-        right: unset;
+        top: auto;
+        right: auto;
         bottom: {{section.settings.spacing_bottom}}px;
         left: {{section.settings.spacing_left}}px;
       }
     }
     @media (min-width: 992px) {
       .live-chat-button.top-right-xl {
-        bottom: unset;
-        left: unset;
+        bottom: auto;
+        left: auto;
         top: {{section.settings.spacing_top}}px;
         right: {{section.settings.spacing_right}}px;
       }
     }
     @media (min-width: 992px) {
       .live-chat-button.top-left-xl {
-        bottom: unset;
-        right: unset;
+        bottom: auto;
+        right: auto;
         top: {{section.settings.spacing_top}}px;
         left: {{section.settings.spacing_left}}px;
       }
