[Section] Start outdated browser detection section

--- a/src/scss/extensions/extensions.scss
+++ b/src/scss/extensions/extensions.scss
@@ -3,6 +3,7 @@
 @import 'aspect-ratio';
 @import 'scrollbars';
 @import 'cursor';
+@import 'display';
 @import 'pointer-events';
 @import 'styleicons';
 @import 'buttons';
