--- a/theme/layout/theme.liquid
+++ b/theme/layout/theme.liquid
@@ -69,6 +69,8 @@
 
   {% section 'live-chat' %}
 
+  {% section 'outdated-browser' %}
+
   <script type="application/ld+json">
   {
     "@context": "http://schema.org",
